RESOLVED FIXED153691
CallLinkStatus should trust BadCell exit sites whenever there is no stub
https://bugs.webkit.org/show_bug.cgi?id=153691
Summary CallLinkStatus should trust BadCell exit sites whenever there is no stub
Filip Pizlo
Reported 2016-01-29 17:35:31 PST
Patch forthcoming.
Attachments
the patch (9.63 KB, patch)
2016-01-29 17:55 PST, Filip Pizlo
benjamin: review+
Filip Pizlo
Comment 1 2016-01-29 17:55:17 PST
Created attachment 270278 [details] the patch
Filip Pizlo
Comment 2 2016-01-29 18:36:51 PST
Note You need to log in before you can comment on or make changes to this bug.