Source/JavaScriptCore/bytecode/CallLinkStatus.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2012-2015 Apple Inc. All rights reserved.
+ * Copyright (C) 2012-2016 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -48,8 +48,6 @@ class CallLinkStatus {
     WTF_MAKE_FAST_ALLOCATED;
 public:
     CallLinkStatus()
-        : m_couldTakeSlowPath(false)
-        , m_isProved(false)
     {
     }
     
@@ -64,8 +62,6 @@ public:
     
     CallLinkStatus(CallVariant variant)
         : m_variants(1, variant)
-        , m_couldTakeSlowPath(false)
-        , m_isProved(false)
     {
     }
     
@@ -73,14 +69,8 @@ public:
         CodeBlock*, unsigned bytecodeIndex, const CallLinkInfoMap&);
 
     struct ExitSiteData {
-        ExitSiteData()
-            : m_takesSlowPath(false)
-            , m_badFunction(false)
-        {
-        }
-        
-        bool m_takesSlowPath;
-        bool m_badFunction;
+        bool takesSlowPath { false };
+        bool badFunction { false };
     };
     static ExitSiteData computeExitSiteData(const ConcurrentJITLocker&, CodeBlock*, unsigned bytecodeIndex);
     
@@ -116,8 +106,9 @@ public:
     CallVariant at(unsigned i) const { return m_variants[i]; }
     CallVariant operator[](unsigned i) const { return at(i); }
     bool isProved() const { return m_isProved; }
+    bool isBasedOnStub() const { return m_isBasedOnStub; }
     bool canOptimize() const { return !m_variants.isEmpty(); }
-    
+
     bool isClosureCall() const; // Returns true if any callee is a closure call.
     
     unsigned maxNumArguments() const { return m_maxNumArguments; }
@@ -134,9 +125,10 @@ private:
 #endif
     
     CallVariantList m_variants;
-    bool m_couldTakeSlowPath;
-    bool m_isProved;
-    unsigned m_maxNumArguments;
+    bool m_couldTakeSlowPath { false };
+    bool m_isProved { false };
+    bool m_isBasedOnStub { false };
+    unsigned m_maxNumArguments { 0 };
 };
 
 } // namespace JSC
